# app/Doc/V1/Profile/ChangePasswordController.php
@@ -3,6 +3,14 @@
 namespace App\Doc\V1\Profile;
 
 /**
+ *  @OA\Parameter(
+ *   parameter="ApiChangePasswordRequest_old_password",
+ *   name="old_password",
+ *   schema={"type": "string"},
+ *   in="query",
+ *   required=true
+ * )
+ * 
  * @OA\Parameter(
  *   parameter="ApiChangePasswordRequest_password",
  *   name="password",
@@ -22,6 +30,7 @@ namespace App\Doc\V1\Profile;
  * @OA\Post(
  * path="/api/v1/user/change-password", 
  * tags={"Profile"},
+ * @OA\Parameter(ref="#/components/parameters/ApiChangePasswordRequest_old_password"),
  * @OA\Parameter(ref="#/components/parameters/ApiChangePasswordRequest_password"),
  * @OA\Parameter(ref="#/components/parameters/ApiChangePasswordRequest_password_confirmation"),
  * @OA\Parameter(ref="#/components/parameters/OA_Relations"),
